# ia-tools

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: .release-please-manifest.json  release-please-config.json
.logs/: mcp-logs.json
agents/: agent-author.md  api-agent.md  architect.md  backend-engineer.md  backend-lead.md  backend.md  code-reviewer.md  domain-agent.md  frontend-engineer.md  frontend-lead.md  frontend.md  issue-refiner.md  mobile-agent.md  mobile-lead.md  mobile.md  orchestrator.md  qa-agent.md  qa-tester.md  qa.md  researcher.md  security-reviewer.md  security.md  senior-developer.md  session-manager.md  test-expert.md  triage.md  ui-agent.md
docker.example/: .env.example  Dockerfile  README.md  docker-compose.example.yml  entrypoint.sh  pod-config.example.json  team-workflow.example.yaml
evals/runners/: run_eval.py
hooks/: enforce-worktree.sh  hooks.json
libs/ia-core/: pyproject.toml
libs/ia-core/src/ia_core/: __init__.py
libs/ia-core/src/ia_core/analyzers/: __init__.py  complexity.py  smells.py
libs/ia-core/src/ia_core/generators/: __init__.py  test_scaffold.py
openclaw/: README.md
opencode/: README.md
rules/: base.md  git.md  python.md  review.md  testing.md  typescript.md
scripts/: check-slack-bridge-dist.sh  ship-thread.sh  sync.py
specs/: deterministic-router-dispatch.md  harness-agent-development-flow.md  hook-architecture.md  unix-socket-everywhere.md
(+375 files in other folders)
